--- a/css/xuepage_201508.css
+++ b/css/xuepage_201508.css
@@ -331,17 +331,13 @@ footer .txt_ad{
 ===============================================================================================*/
 #box_pageinfo .box_stills{
 	display:block;
-	width:763px;
-	padding:100px 50px 0 0}
-#box_pageinfo .box_stills h4{
-	font-size:1em;
-	letter-spacing:1px;
-	margin:10px 0 0 0}
+	width:660px;
+	padding-top:30px}
 #box_pageinfo .box_stills ul{ margin:0; padding:0}
 #box_pageinfo .box_stills li{
 	display: inline-block;
-	width:110px;
-	height:110px;
+	width:85px;
+	height:85px;
 	background:#F5E3EF;
 	margin:15px;
 	list-style:none;
