--- a/css/xuepage_201508.css
+++ b/css/xuepage_201508.css
@@ -71,9 +71,9 @@ h1 a{
 	position:absolute;
 	top:0;
 	left:30px;
-	width:212px;
-	height:120px;
-	background:url(../images/pic_h1.png) no-repeat;
+	width:178px;
+	height:221px;
+	background:url(../images/pic_subh1.png) no-repeat;
 	text-indent:-9999px}
 
 /* 2.2 主要內容區塊 */		
@@ -96,7 +96,8 @@ h1 a{
 	height:44px}
 		
 
-/* 2.3 首頁選單 */		
+/* 2.3 首頁選單 */
+#box_aside{}		
 #box_aside li a{
 	display: block;
 	width:131px;
@@ -195,7 +196,7 @@ footer .txt_ad{
 #box_aside ul{
 	display:block;
 	width:210px;
-	padding-top:110px}
+	padding-top:210px}
 
 #box_pagemain{
 	display:block;
@@ -402,4 +403,5 @@ footer .txt_ad{
 	background:url(../images/link_logo.png) no-repeat;
 	text-indent:-9999px;
 	margin:0 auto}
-.box_link li a.icon-office{ background-position:0 -132px}	
+.box_link li a.icon-office{ background-position:0 -132px}
+.box_link li a.icon-office-02{ background-position:0 -264px}	
